// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectNetworkStep > should render 1`] = `
<DocumentFragment>
  <section
    data-testid="NetworkStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background hidden sm:block"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="css-h1kfx5"
            data-testid="icon-SelectNetworkLight"
            height="24"
            width="24"
          >
            <svg
              fill="none"
              viewBox="0 0 24 25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 2.00781C9.02944 2.00781 5 6.03725 5 11.0078L9.5 11C9.5 11.3333 9.6 12.3 10 13.5C10.5 15 11 15.7538 13 15.7538H21.6484C22.5052 14.376 23 12.7497 23 11.0078C23 6.03725 18.9706 2.00781 14 2.00781Z"
                fill="#E6EFF9"
              />
              <path
                d="M5 11.0078C5 6.03725 9.02944 2.00781 14 2.00781C18.9706 2.00781 23 6.03725 23 11.0078C23 14.1332 21.4069 16.8865 18.9884 18.5"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M11.7969 2.27734C10.5969 4.07734 9.79688 7.40048 9.79688 11.0005C9.79688 11.7604 9.83252 12.5086 9.90006 13.233"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M5 11.0078H23"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M12.4961 15.707H21.6777"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M6.45312 6.10742H21.5539"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M16.2031 2.27734C17.4031 4.07734 18.1031 7.3065 18.1031 11.0065C18.1031 13.4738 17.7919 15.7317 17.2286 17.4961"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M9.25 16.7188H1.75"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M4.16667 19.1146L1.75 16.6979L4.16667 14.2812"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M8.75 20.6797L16.25 20.6797"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M13.8333 18.2839L16.25 20.7005L13.8333 23.1172"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <h1
            class="mb-0 text-2xl leading-[29px]"
            data-testid="header__title"
          >
            title
          </h1>
        </div>
        <div
          class="flex items-center leading-5 text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          subtitle
        </div>
      </div>
    </div>
    <fieldset
      class="mt-4 css-1bcidjh"
    >
      <div
        data-testid="SelectNetwork"
      />
    </fieldset>
  </section>
</DocumentFragment>
`;

exports[`SelectNetworkStep > should render with test networks 1`] = `
<DocumentFragment>
  <section
    data-testid="NetworkStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background hidden sm:block"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="css-h1kfx5"
            data-testid="icon-SelectNetworkLight"
            height="24"
            width="24"
          >
            <svg
              fill="none"
              viewBox="0 0 24 25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 2.00781C9.02944 2.00781 5 6.03725 5 11.0078L9.5 11C9.5 11.3333 9.6 12.3 10 13.5C10.5 15 11 15.7538 13 15.7538H21.6484C22.5052 14.376 23 12.7497 23 11.0078C23 6.03725 18.9706 2.00781 14 2.00781Z"
                fill="#E6EFF9"
              />
              <path
                d="M5 11.0078C5 6.03725 9.02944 2.00781 14 2.00781C18.9706 2.00781 23 6.03725 23 11.0078C23 14.1332 21.4069 16.8865 18.9884 18.5"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M11.7969 2.27734C10.5969 4.07734 9.79688 7.40048 9.79688 11.0005C9.79688 11.7604 9.83252 12.5086 9.90006 13.233"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M5 11.0078H23"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M12.4961 15.707H21.6777"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M6.45312 6.10742H21.5539"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M16.2031 2.27734C17.4031 4.07734 18.1031 7.3065 18.1031 11.0065C18.1031 13.4738 17.7919 15.7317 17.2286 17.4961"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M9.25 16.7188H1.75"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M4.16667 19.1146L1.75 16.6979L4.16667 14.2812"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M8.75 20.6797L16.25 20.6797"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M13.8333 18.2839L16.25 20.7005L13.8333 23.1172"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <h1
            class="mb-0 text-2xl leading-[29px]"
            data-testid="header__title"
          >
            title
          </h1>
        </div>
        <div
          class="flex items-center leading-5 text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          subtitle
        </div>
      </div>
    </div>
    <fieldset
      class="mt-4 css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div
        data-testid="SelectNetwork"
      >
        <div
          class="relative w-full"
          data-testid="SelectDropdown"
        >
          <div
            class="sr-only css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none css-1vs1awz"
                data-testid="select-list__input"
                name="network"
                readonly=""
                tabindex="-1"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="downshift-0-menu"
              role="combobox"
            >
              <div>
                <label
                  for="downshift-0-input"
                  id="downshift-0-label"
                />
                <div
                  class="css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-0-menu"
                      aria-labelledby="downshift-0-label"
                      autocomplete="off"
                      class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                      data-testid="SelectDropdown__input"
                      id="downshift-0-input"
                      name="network"
                      placeholder="Select option"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex items-center justify-center px-1 py-2"
                          data-testid="SelectDropdown__caret"
                        >
                          <div
                            class="absolute inset-0 block cursor-pointer md:hidden"
                          />
                          <div
                            class="transition-transform text-theme-secondary-500 css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg
                              id="caret-down"
                              viewBox="0 0 10 10"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                                fill="currentColor"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="downshift-0-label"
                id="downshift-0-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </section>
</DocumentFragment>
`;

exports[`SelectNetworkStep > should render without test networks 1`] = `
<DocumentFragment>
  <section
    data-testid="NetworkStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background hidden sm:block"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="css-h1kfx5"
            data-testid="icon-SelectNetworkLight"
            height="24"
            width="24"
          >
            <svg
              fill="none"
              viewBox="0 0 24 25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 2.00781C9.02944 2.00781 5 6.03725 5 11.0078L9.5 11C9.5 11.3333 9.6 12.3 10 13.5C10.5 15 11 15.7538 13 15.7538H21.6484C22.5052 14.376 23 12.7497 23 11.0078C23 6.03725 18.9706 2.00781 14 2.00781Z"
                fill="#E6EFF9"
              />
              <path
                d="M5 11.0078C5 6.03725 9.02944 2.00781 14 2.00781C18.9706 2.00781 23 6.03725 23 11.0078C23 14.1332 21.4069 16.8865 18.9884 18.5"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M11.7969 2.27734C10.5969 4.07734 9.79688 7.40048 9.79688 11.0005C9.79688 11.7604 9.83252 12.5086 9.90006 13.233"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M5 11.0078H23"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M12.4961 15.707H21.6777"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M6.45312 6.10742H21.5539"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M16.2031 2.27734C17.4031 4.07734 18.1031 7.3065 18.1031 11.0065C18.1031 13.4738 17.7919 15.7317 17.2286 17.4961"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M9.25 16.7188H1.75"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M4.16667 19.1146L1.75 16.6979L4.16667 14.2812"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M8.75 20.6797L16.25 20.6797"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M13.8333 18.2839L16.25 20.7005L13.8333 23.1172"
                stroke="#235B95"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <h1
            class="mb-0 text-2xl leading-[29px]"
            data-testid="header__title"
          >
            title
          </h1>
        </div>
        <div
          class="flex items-center leading-5 text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          subtitle
        </div>
      </div>
    </div>
    <fieldset
      class="mt-4 css-1bcidjh"
    >
      <div
        data-testid="SelectNetwork"
      />
    </fieldset>
  </section>
</DocumentFragment>
`;
